--- a/index.html
+++ b/index.html
@@ -36,18 +36,32 @@ window.navigator.appVersion.match(/MSIE [678]/)&&(document.createElement("sectio
       </div>
     </header>
     <section class="intro section-wrapper">
-      <a class="gweb-smoothscroll-control paper-button btn-next" data-g-event="nav" data-g-label=
-      "scrolldown" href="#resources"><span>Down</span></a>
+      <!--<a class="gweb-smoothscroll-control paper-button btn-next" data-g-event="nav" data-g-label=
+      "scrolldown" href="#resources"><span>Down</span></a>-->
       <div class="span-9" id="intro">
-        <p>
+        <p class="subhead">about</p>
+        <p class="bio">
           I'm a front-end web developer from <a href="http://en.wikipedia.org/wiki/Edison,_New_Jersey">Edison, NJ</a>. I'm fluent in HTML, CSS, and English. I'm currently a sophomore at Rutgers University studying Electrical and Computer Engineering.
         </p>
+
+        <p class="subhead">work</p>
+        <ul class="work-list">
+            <li><strong>Intern at <a id="sd" href="https://seamlessdocs.com/">SeamlessDocs</a></strong>: Currently in progress.</li>
+            <li><strong>Writer on <a id="sv" href="http://blog.viraljogani.com/">Svbtle</a></strong> + <strong><a id="md" href="http://medium.com/@virjog">Medium</a></strong>: Trying to collect my thoughts and musings on life.</li>
+            <li><strong>Designed <a id="sci"href="http://app.viraljogani.com/">SoundCloud Instant</a></strong>: Quickly search and play tracks on SoundCloud.</li>
+
+            <p class="resume">Click <b><a href="https://www.dropbox.com/s/ziuddv1e2p54990/Jogani%2BViral%2BResume.pdf">here</a></b> to download my résumé.</p>
+        </ul>
+
+        <p class="subhead">social</p>
+        <p class="bio">Say hi at <a id="gm" href="mailto:viraljogani@gmail.com">viraljogani@gmail.com</a>. Or add me on the following networks: <a id="tw" href="https://twitter.com/virjog/">twitter</a>, <a id="fb" href="https://facebook.com/virjog/">facebook</a>, <a id="li" href="https://linkedin.com/in/viraljogani/">linkedin</a>, <a id="gh" href="https://github.com/virjog/">github</a>.</p>
+
       </div>
     </section>
-    <section class="resources section-wrapper" id="resources">
+    <!--<section class="resources section-wrapper" id="resources">
       <div class="social-networks">
-        <p>
-          add me on the following networks:
+        <p class="subhead">
+          social
         </p>
       <div class="row">
         <div class="resource-tile-wrapper span-6">
@@ -117,7 +131,7 @@ window.navigator.appVersion.match(/MSIE [678]/)&&(document.createElement("sectio
         </div>
         </div>
       </div>
-    </section>  
+    </section>-->
     
     <footer>
       <div id="wrap" class="section-wrapper">
